kube/todo-back-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-back
  template:
    metadata:
      labels:
        app: todo-back
    spec:
      containers:
        - name: todo-back
          image: loadeksdee/todo-back:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
