kube/todo-front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
        - name: todo-front
          image: loadeksdee/todo-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          imagePullPolicy: Always
