kube/todo-back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-back
spec:
  selector:
    app: todo-back
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
