kube/todo-front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-front
spec:
  selector:
    app: todo-front
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
