kube/todo-front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-front-ingress
spec:
  defaultBackend:
    service:
      name: todo-front
      port:
        number: 80
